--- a/templates/blocks/about.html
+++ b/templates/blocks/about.html
@@ -1,3 +1,34 @@
-{{ block "title" . }}
-    <title>About</title>
+{{ block "Title" . }}
+<title>About</title>
+{{ end }}
+
+{{ block "Header" . }}
+<header class="bg-rose-400 my-4 p-4">
+    <h1 class="font-mono text-2xl italic font-bold">Hello, world!</h1>
+    <h4>My name is... My name is... ~silence~</h4>
+</header>
+{{ end }}
+
+{{ block "Footer" . }}
+<footer class="bg-lime-400 my-4 p-4">
+    <a href="/">"I wanna go home" link</a>
+
+    <div class="my-4 p-4">
+        <div class="p-3" id="content">
+            Waiting for content!
+        </div>
+
+        <div>
+            <button type="button" class="rounded bg-pink-600 p-2" hx-get="/1s-delay"
+                hx-trigger="load delay:1s throttle:1s" hx-target="#content">
+                Auto get content | delay 3s
+            </button>
+
+            <button type="button" class="rounded bg-pink-600 p-2" hx-get="/7s-delay"
+                hx-trigger="load delay:7s throttle:7s" hx-target="#content">
+                Auto get content | delay 7s
+            </button>
+        </div>
+    </div>
+</footer>
 {{ end }}
